@@ -63,8 +63,7 @@ sub perl_fu_image_tile {
   if (! -d $TOP) {
     $TOP = "/tmp";
     if (! -d $TOP) {
-      gimp_message("Don't know where to put temporary files!");
-      exit(1);
+      die "Don't know where to put temporary files!";
     }
   }
 
@@ -96,8 +95,7 @@ sub perl_fu_image_tile {
   if (!defined($db = tie(%tile_cache, 'DB_File',
 	    $cache_file, O_RDWR|O_CREAT,
 	    0644, $DB_HASH))) {
-    gimp_message("Failed to create tile sample database: $!");
-    exit(0);
+    die "Failed to create tile sample database: $!";
   }
 
   # The other cache file contains image re-use weights, which only get
@@ -105,8 +103,7 @@ sub perl_fu_image_tile {
   my $wt_file = "$TOP/image_tile.$$";
   if (!defined($wdb=tie(%wt_cache,'DB_File',$wt_file,
 			O_RDWR|O_CREAT|O_TRUNC,0644,$DB_HASH))) {
-    gimp_message("Failed to create weight database: $!");
-    exit(0);
+    die "Failed to create weight database: $!";
   }
 
   # Loop over directories, looking for images
@@ -164,8 +161,7 @@ sub perl_fu_image_tile {
   }
 
   if ($subimages == 0) {
-    gimp_message("$0: No subimages loaded.");
-    exit(0);
+    die "$0: No subimages loaded.";
   }
 
   $db->sync(0);
