@@ -36,6 +36,7 @@ Revision history for Gimp-Perl extension.
         - applied edit_fill change. Boy we need default agruments soon!
 	- pxgettext exits with success instead of error on version check,
 	  so the build doesn't completely die. (Yosh)
+        - fixed examples/image_tile to use die instead of exit.
 
 1.19  Thu Jan  6 00:21:58 CET 2000
         - used N_ to mark all the menu paths, since gimp now tries to
